[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "yet_another_wizz_rail"
dynamic = ["version"]
authors = [
    {name = "Jan Luca van den Busch", email = "jlvdb@astro.ruhr-uni-bochum.de"},
]
description = "Interface for yet_another_wizz for the LSST DESC RAIL package."
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
requires-python = ">=3.8"
dependencies = [
    "yet_another_wizz==2.5.5",
    "pz-rail-base",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]
style = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
dev = [
    "yet_another_wizz_rail[test]",
    "yet_another_wizz_rail[style]",
    "ipykernel",
]

[tool.setuptools.dynamic]
version = {attr = "yaw_rail.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--cov=yaw_rail",
    "--cov-report=xml",
]

[tool.isort]
profile = "black"

[tool.black]
include = ".pyi?$"
exclude = """
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
"""
